# sigil

./: .claudeignore  .gitignore  CLAUDE.md  README.md  RELEASE.md  icon.icns  index.html  package-lock.json  package.json
.claude/: launch.json
.claude/skills/: create-sigil.md  design-partner.md  reconstruct-sigil.md  release.md
.github/workflows/: deploy-site.yml  release.yml
docs/Sigil/: glossary.md  integrations.json  language.md  ontology.md  ux.md
docs/architecture/: refactoring-extract-core-merge-site.md  technology.md
docs/genesis/: 2026-03-28_2016_lexical-beaming-lampson.md  2026-03-28_2132_moonlit-stargazing-floyd.md  2026-03-28_2244_ad37e4d2.md  2026-03-29_0422_rosy-wandering-quilt.md  2026-03-29_0549_atomic-puzzling-dewdrop.md  (+20 more)
language/: language.md
scripts/: export-sigil-json.ts  export_conversations.py  export_conversations.sh  generate-partner-prompt.ts  test_export_conversations.py
site/: index.html  package.json
site/src/: App.css  (+7 more)
specification.sigil/: language.md
src/: App.tsx  WorkspaceShell.tsx  main.tsx  tauri.test.ts  tauri.ts
src-tauri/: .tauri-updater-key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  documents.rs  export.rs  file_ops.rs  mod.rs  sigil.rs  spec_tree.rs  tools.rs  watcher.rs  workspace_lock.rs
src-tauri/src/memory/: db.rs  embedder.rs  experience.rs  indexer.rs  memorizer.rs  mod.rs  retriever.rs  sleeper.rs
src-tauri/src/models/: chat.rs  mod.rs  settings.rs  sigil.rs  spec_tree.rs
(+809 files in other folders)
