[package]
name = "sigil"
version = "0.29.0"
edition = "2021"

[lib]
name = "sigil_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sigil"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
walkdir = "2"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
fastembed = "4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
